src/components/Form/Form.module.css
form {
  margin: 10px;
}

.formBackground {
  background-color: #afbc88;
  border-radius: 10px;
  padding: 1em;
}

.topButtonsOnForm {
  text-align: center;
}

.topButtonsOnForm button {
  width: 100%;
}

.topButtonsOnForm button:hover {
  background-color: #f7bc8a;
}

.buttonIsSelected {
  background-color: #ea7006;
}

.buttonNotSelected {
  background-color: #618b4a;
}

.mapButtons {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.mapButtons button {
  width: 115px;
  margin: 10px;
  padding: 5px;
}

.theForm {
  display: grid;
  grid-template-columns: 50% 50%;
  margin-top: 1em;
}

.formButton {
  border-radius: 10px;
  border: none;
  margin: 0.21em auto;
  padding: 0.5em;
}

.formBackground label {
  grid-column: 1;
  margin-top: 5px;
}

.formBackground input {
  border-radius: 10px;
  border: 2px solid #618b4a;
  grid-column: 2;
  padding: 0.5em;
}

.submitButton {
  margin-top: 1em;
  border-radius: 10px;
  background-color: #ea7006;
  grid-column: 2;
}

.selectTreeSpecies {
  border-radius: 10px;
  border: 2px solid #618b4a;
  padding: 0.5em;
}

